# negation_and_fuzzy_logic

./: .gitattributes  .gitignore  .gitmodules  Makefile  ciao-el.patch  ciao-el.patch2  ciao-prolog-el.dirs  ciao-prolog-el.emacsen-install  ciao-prolog.install  ciao-prolog.manpages  comments.txt  control  post-commit  rules
adobe-reader-pkg-for-debian/: README.Debian  adobe-reader-pkg-for-debian.sh  changelog  control  copyright  rules  update-java-oracle-nondebian-installation-aux.sh
ciao-debian/: control  (+14 more)
ciao-prolog/ciao-prolog-1.15.0+r14995/ciao/contrib/timingmodel/miniprolog/src/wam/: Atoms.cpp  ByteCode.h  CMakeLists.txt  ChoicePoint.h  Compiler.h  CompilerStructure.cpp  CompilerStructure.h  Engine.cpp  Environment.h  Instruction.h  InstructionSpec.h  InstructionSpecImpl.h  MainWAM.cpp  MemSegment.h  Profiler.cpp  Program.cpp  Program.h  PrologCompiler.cpp  QueryCompiler.h  Trail.h  VariableImpl.h  WAMUtils.cpp  compat.h  glue_hash.h  glue_map.h  types.h
ciao-prolog/ciao-prolog-1.15.0+r14995/ciao/contrib/timingmodel/miniprolog/src/wam/.svn/: entries
ciao-prolog/ciao-prolog-1.15.0+r14995/ciao/contrib/timingmodel/miniprolog/src/wam/.svn/text-base/: Atoms.h.svn-base  ClauseKey.h.svn-base  Compiler.cpp.svn-base  Engine.h.svn-base  EngineImpl.h.svn-base  Functions.cpp.svn-base  Functions.h.svn-base  HashString.h.svn-base  InstructionSpec.cpp.svn-base  Profiler.h.svn-base  PrologCompiler.h.svn-base  QueryCompiler.cpp.svn-base  Settings.h.svn-base  Variable.cpp.svn-base  Variable.h.svn-base  WAMUtils.h.svn-base  gc.h.svn-base  hrtime.cpp.svn-base  hrtime.h.svn-base
(+31454 files in other folders)
